Tools/MiniBrowser/efl/main.c
@@ -29,6 +29,7 @@ static const char DEFAULT_URL[] = "http://www.google.com/";
 static const char APP_NAME[] = "EFL MiniBrowser";
 static const int TOOL_BAR_ICON_SIZE = 24;
 static const int TOOL_BAR_BUTTON_SIZE = 32;
+static const double TOOLTIP_DELAY_SECONDS = 1.0;
 
 #define info(format, args...)       \
     do {                            \
@@ -75,6 +76,13 @@ static Ewk_View_Smart_Class *miniBrowserViewSmartClass()
     return &ewkViewClass;
 }
 
+typedef struct _Tooltip_Information {
+    Ecore_Timer *show_timer;
+    Eina_Bool activated;
+    Eina_Bool text_set;
+    Eina_Bool shown;
+} Tooltip_Information;
+
 typedef struct _Browser_Window {
     Evas_Object *elm_window;
     Evas_Object *ewk_view;
@@ -82,6 +90,7 @@ typedef struct _Browser_Window {
     Evas_Object *back_button;
     Evas_Object *forward_button;
     int current_zoom_level; 
+    Tooltip_Information tooltip;
 } Browser_Window;
 
 typedef struct _File_Selector_Data {
@@ -166,11 +175,77 @@ static Browser_Window *window_find_with_ewk_view(Evas_Object *ewk_view)
     return NULL;
 }
 
+static Eina_Bool
+on_tooltip_show(void *user_data)
+{
+    Browser_Window *window = (Browser_Window *)user_data;
+
+    window->tooltip.show_timer = NULL;
+    elm_object_tooltip_show(window->elm_window);
+    window->tooltip.shown = EINA_TRUE;
+    return ECORE_CALLBACK_CANCEL;
+}
+
+static void
+window_tooltip_hide(Browser_Window *window)
+{
+    if (window->tooltip.show_timer) {
+        ecore_timer_del(window->tooltip.show_timer);
+        window->tooltip.show_timer = NULL;
+    }
+
+    if (window->tooltip.shown) {
+        elm_object_tooltip_hide(window->elm_window);
+        window->tooltip.shown = EINA_FALSE;
+    }
+}
+
+static void
+window_tooltip_update(Browser_Window *window)
+{
+    window_tooltip_hide(window);
+
+    if (window->tooltip.activated && window->tooltip.text_set)
+        window->tooltip.show_timer = ecore_timer_add(TOOLTIP_DELAY_SECONDS, on_tooltip_show, window);
+}
+
+static void
+on_mouse_in(void *user_data, Evas *e, Evas_Object *ewk_view, void *event_info)
+{
+    Browser_Window *window = (Browser_Window *)user_data;
+
+    window->tooltip.activated = EINA_TRUE;
+    window_tooltip_update(window);
+}
+
+static void
+on_mouse_move(void *user_data, Evas *e, Evas_Object *ewk_view, void *event_info)
+{
+    window_tooltip_update((Browser_Window *)user_data);
+}
+
+static void
+on_mouse_out(void *user_data, Evas *e, Evas_Object *ewk_view, void *event_info)
+{
+    Browser_Window *window = (Browser_Window *)user_data;
+
+    window->tooltip.activated = EINA_FALSE;
+    window_tooltip_update(window);
+}
+
 static void window_free(Browser_Window *window)
 {
+    evas_object_event_callback_del(window->ewk_view, EVAS_CALLBACK_MOUSE_IN, on_mouse_in);
+    evas_object_event_callback_del(window->ewk_view, EVAS_CALLBACK_MOUSE_OUT, on_mouse_out);
+    evas_object_event_callback_del(window->ewk_view, EVAS_CALLBACK_MOUSE_MOVE, on_mouse_move);
+
     evas_object_del(window->ewk_view);
     /* The elm_win will take care of freeing its children */
     evas_object_del(window->elm_window);
+
+    if (window->tooltip.show_timer)
+        ecore_timer_del(window->tooltip.show_timer);
+
     free(window);
 }
 
@@ -954,8 +1029,9 @@ on_tooltip_text_set(void *user_data, Evas_Object *obj, void *event_info)
     Browser_Window *window = (Browser_Window *)user_data;
     const char *message = (const char*)event_info;
 
-    elm_object_tooltip_text_set(window->ewk_view, message);
-    elm_object_tooltip_show(window->ewk_view);
+    elm_object_tooltip_text_set(window->elm_window, message);
+    window->tooltip.text_set = EINA_TRUE;
+    window_tooltip_update(window);
 }
 
 static void
@@ -963,7 +1039,9 @@ on_tooltip_text_unset(void *user_data, Evas_Object *obj, void *event_info)
 {
     Browser_Window *window = (Browser_Window *)user_data;
 
-    elm_object_tooltip_unset(window->ewk_view);
+    window_tooltip_hide(window);
+    elm_object_tooltip_unset(window->elm_window);
+    window->tooltip.text_set = EINA_FALSE;
 }
 
 static void
@@ -1003,6 +1081,12 @@ static Browser_Window *window_create(Evas_Object *opener, const char *url, int w
         info("ERROR: could not create browser window.\n");
         return NULL;
     }
+
+    /* Initialize tooltip information */
+    window->tooltip.show_timer = NULL;
+    window->tooltip.activated = EINA_FALSE;
+    window->tooltip.text_set = EINA_FALSE;
+    window->tooltip.shown = EINA_FALSE;
 
     /* Create window */
     window->elm_window = elm_win_add(NULL, "minibrowser-window", ELM_WIN_BASIC);
@@ -1145,6 +1229,10 @@ static Browser_Window *window_create(Evas_Object *opener, const char *url, int w
     evas_object_show(window->elm_window);
 
     view_focus_set(window, EINA_TRUE);
+
+    evas_object_event_callback_add(window->ewk_view, EVAS_CALLBACK_MOUSE_IN, on_mouse_in, window);
+    evas_object_event_callback_add(window->ewk_view, EVAS_CALLBACK_MOUSE_OUT, on_mouse_out, window);
+    evas_object_event_callback_add(window->ewk_view, EVAS_CALLBACK_MOUSE_MOVE, on_mouse_move, window);
 
     return window;
 }
